--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
     display: block;
     border: thin solid black;
     padding: 42px;
-    height: 890px;
+    height: 84vh;
     font-family: "Oswald", "sf";
     letter-spacing: 2px;
 }
