--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 }
 
 * {
-    /* border: thin solid black; */
+    border: thin solid black;
 }
 
 .total {
@@ -116,9 +116,10 @@ a:hover {
 }
 
 .work-caption {
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: bold;
-    padding-top: 10px;
     font-size: 20px;
     width: 100%;
     height: 50px;
