--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
+    /* border: thin solid white; */
     background-color: black;
-    height: 84vh;
+    height: 92vh;
     margin: 0;
     padding: 42px;
 }
@@ -11,11 +12,11 @@ body {
 
 .total {
     background-image: url(https://cdn.discordapp.com/attachments/431354432987594763/1027119185307914250/ezgif-4-31bc060430.gif);
-    background-size: 2100px 980px;
+    background-size: 2100px 990px;
     display: block;
     border: thin solid black;
     padding: 42px;
-    height: 100%;
+    height: 92%;
     font-family: "Oswald", "sf";
     letter-spacing: 2px;
 }
