--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
 body {
     /* border: thin solid white; */
     background-color: black;
-    height: 92vh;
+    bottom: 0;
     margin: 0;
-    padding: 42px;
 }
 
 * {
@@ -14,9 +13,13 @@ body {
     background-image: url(https://cdn.discordapp.com/attachments/431354432987594763/1027119185307914250/ezgif-4-31bc060430.gif);
     background-size: 2100px 990px;
     display: block;
+    position: absolute;
     border: thin solid black;
     padding: 42px;
-    height: 92%;
+    top: 42px;
+    bottom: 42px;
+    left: 42px;
+    right: 42px;
     font-family: "Oswald", "sf";
     letter-spacing: 2px;
 }
@@ -40,8 +43,8 @@ body {
 #socials {
     display: none;
     position: absolute;
-    top: 84px;
-    right: 84px;
+    top: 42px;
+    right: 42px;
 }
 
 .social-links {
@@ -73,6 +76,7 @@ a:hover {
 }
 
 .section-container {
+    /* border: thin solid black; */
     display: flex;
     position: absolute;
     justify-content: left;
@@ -103,6 +107,7 @@ a:hover {
 }
 
 .work-tiles {
+    /* border: thin solid black; */
     display: inline-block;
     width: 380px;
     height: 264px;
@@ -111,15 +116,16 @@ a:hover {
 }
 
 .work-image {
+    /* border: thin solid black; */
     width: 100%;
     height: 214px;
-    margin: 0;
 }
 
 .work-caption {
+    /* border: thin solid black; */
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     font-weight: bold;
     font-size: 20px;
     width: 100%;
@@ -138,8 +144,8 @@ img {
 #sidebar-bottom-left {
     display: none;
     position: absolute;
-    left: 84px;
-    bottom: 84px;
+    left: 42px;
+    bottom: 42px;
     height: 390px;
     font-weight: bold;
     width: 200px;
