--- a/index.css
+++ b/index.css
@@ -146,7 +146,7 @@ img {
     position: absolute;
     left: 42px;
     bottom: 42px;
-    height: 390px;
+    top: 530px;
     font-weight: bold;
     width: 200px;
 }
