--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
     /* border: thin solid black; */
 }
 
-.total {
+.container-main {
     background-image: url(https://cdn.discordapp.com/attachments/431354432987594763/1027119185307914250/ezgif-4-31bc060430.gif);
     background-size: 2100px 990px;
     display: block;
@@ -25,22 +25,16 @@ body {
 }
 
 #name {
-    display: inline-block;
     font-weight: bolder;
     font-size: 72px;
 }
 
 #title {
-    display: inline-block;
     font-size: 22px;
     margin-bottom: 50px;
 }
 
-#seperator {
-    display: inline-block;
-}
-
-#socials {
+#top-right-socials {
     display: none;
     position: absolute;
     top: 42px;
@@ -49,9 +43,27 @@ body {
 
 .social-links {
     color: black;
-    margin-left: 15px;
     font-weight: bold;
     font-size: large;
+}
+
+.top-right-socials-links {
+    display: inline-block;
+}
+
+#sidebar-bottom-left {
+    display: none;
+    position: absolute;
+    left: 42px;
+    bottom: 42px;
+    top: 530px;
+    font-weight: bold;
+    width: 200px;
+}
+
+.bottom-left-social-links {
+    display: block;
+    margin: 0;
 }
 
 a:link {
@@ -64,11 +76,11 @@ a:hover {
 }
 
 .nav-buttons {
-    display: inline-block;
     color: black;
     margin: 0px 0px 10px 0px;
     font-size: 18px;
     font-weight: bold;
+    padding-bottom: 5px;
 }
 
 .nav-buttons:hover {
@@ -109,8 +121,8 @@ a:hover {
 .work-tiles {
     /* border: thin solid black; */
     display: inline-block;
-    width: 380px;
-    height: 264px;
+    width: 400px;
+    height: 275px;
     margin: 46px;
     background-color: none;
 }
@@ -118,7 +130,7 @@ a:hover {
 .work-image {
     /* border: thin solid black; */
     width: 100%;
-    height: 214px;
+    height: 225px;
 }
 
 .work-caption {
@@ -139,18 +151,4 @@ img {
 
 .close-mid-tiles {
     margin-left: 0;
-}
-
-#sidebar-bottom-left {
-    display: none;
-    position: absolute;
-    left: 42px;
-    bottom: 42px;
-    top: 530px;
-    font-weight: bold;
-    width: 200px;
-}
-
-.sidebar {
-    margin: 0;
 }
