--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@ a:hover {
 }
 
 .section-container {
-    border: thin solid black;
+    /* border: thin solid black; */
     display: flex;
     position: absolute;
     justify-content: left;
@@ -120,18 +120,17 @@ a:hover {
 
 .work-tiles {
     /* border: thin solid black; */
-    box-sizing: border-box;
     display: inline-block;
-    width: 400px;
-    height: 275px;
-    margin: 40px;
+    width: 380px;
+    height: 264px;
+    margin: 46px;
     background-color: none;
 }
 
 .work-image {
     /* border: thin solid black; */
     width: 100%;
-    height: 225px;
+    height: 214px;
 }
 
 .work-caption {
